<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="adapter"
            type="com.gulsahozaltun.armutproject.adapter.AllServicesAdapter" />
        <variable
            name="adapterPopular"
            type="com.gulsahozaltun.armutproject.adapter.PopularAdapter" />
        <variable
            name="postsAdapter"
            type="com.gulsahozaltun.armutproject.adapter.PostsAdapter" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".fragment.MainPageFragment">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:adapter="@{adapter}"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:spanCount="4" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/all_services"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/acme"
                android:text="@string/popular"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:adapter="@{adapterPopular}"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/acme"
                android:text="@string/blog"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adapter="@{postsAdapter}"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="0dp"
                android:layout_height="400dp"
                android:background="@drawable/header"
                android:gravity="top"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                android:visibility="visible"
                app:buttonGravity="center_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="30dp"
                    android:text="@string/main_title"
                    android:textColor="@color/black"
                    android:textSize="35sp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="18dp" />
            </androidx.appcompat.widget.Toolbar>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/wedding">

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:background="@color/armut_green"
                        android:fontFamily="@font/roboto_bold"
                        android:paddingStart="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/wed_text"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@color/armut_green"
                        android:fontFamily="@font/roboto"
                        android:paddingStart="8dp"
                        android:paddingTop="8dp"
                        android:text="@string/weds"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toTopOf="@+id/textView20"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="95dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="8dp"
                        android:foregroundGravity="center_vertical"
                        app:cardCornerRadius="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/textView17"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:fontFamily="@font/acme"
                                android:gravity="center"
                                android:text="-15%"
                                android:textColor="@color/black"
                                android:textSize="22sp"
                                android:textStyle="bold"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/textView18"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:fontFamily="@font/acme"
                                android:gravity="center"
                                android:text="@string/discount"
                                android:textColor="@color/black"
                                android:textSize="18sp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/textView17" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.cardview.widget.CardView>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>